turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:28: error: not enough arguments for method step: (rule: Array[Char], colors: Array[java.awt.Color])Unit.
Unspecified value parameters rule, colors.
			step();
                            ^